fix minor mobile issue where padding in two column lists made formatting weird when they collapse to one column

--- a/assets/less/site.less
+++ b/assets/less/site.less
@@ -72,6 +72,11 @@ a {
     .six.columns {
         padding-left: 30px;
         padding-right: 30px;
+
+        @media (max-width: @concrete-stop) {
+            padding-left: 0px;
+            padding-right: 0px;
+        }
     }
 
     li {
